[package]
name = "divinity2-polish-do-not-translate-fix"
version = "1.3.0"
edition = "2021"
description = "Fix for DO NOT TRANSLATE placeholders in the Polish version of Divinity II: Developer's Cut"
license-file = "LICENSE"
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
eframe = { version = "0.31", default-features = true }
egui = "0.31"
flate2 = "1.0"
rfd = "0.15"
walkdir = "2.5"
zopfli = { version = "0.8.3", default-features = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
